--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "firebase": "^7.5.0",
+    "firebase-admin": "^8.8.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-web": "^0.11.7"
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-ionicons": "^4.5.6",
+    "react-native-maps": "~0.25.0",
+    "react-native-paper": "^2.15.2",
+    "react-native-phone-call": "^1.0.9",
+    "react-native-web": "^0.11.7",
+    "react-navigation": "^3.13.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
